src/objects/Agency_Involved_With_Individual__c.object
<CustomObject>
    <description>REFERRAL - Agencies involved with the referral</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IDofPBR_FromPBS__c</fullName>
        <formula>Person_Being_Served__r.Person_Being_Referred__r.Id</formula>
        <label>IDofPBR_FromPBS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDofPBS_FromRef__c</fullName>
        <formula>Referral__r.Person_Being_Served__r.Id</formula>
        <label>IDofPBS_FromRef</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Being_Served__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Served</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agency Involved With Individual</relationshipLabel>
        <relationshipName>Agency_Involved_With_Individual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reason_for_Involvement__c</fullName>
        <label>Reason for Involvement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Agency Involved With Individual</relationshipLabel>
        <relationshipName>Agency_Involved_With_Individual</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Agency Involved With Individual</label>
    <nameField>
        <label>Agency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Involved With Individual</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>